--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@
 	</nav>
 	<!-- Navigation End -->
 
+	<!-- Home Section Start -->
+	<section id="home" class="container mt-5 text-white">
+		<div id="introduction" class="text-center">
+			<h1>Welcome to EduHub – Your Gateway to Knowledge!</h1>
+			<p>Unlock endless learning opportunities with a world of resources at your fingertips. Whether you're a student, an educator, or simply curious about expanding your knowledge, EduHub is your one-stop destination for high-quality educational materials. Dive into insightful content, explore different subjects, and fuel your passion for learning!</p>
+		</div>
+
+		<div class="text-center mt-4">
+			<h2> Featured Resources </h2>
+			<p>Explore some of our top learning materials handpicked for you.</p>
+		</div>
+		<div id="featured" class="row mt-4">
+			<div class="col-md-6">
+				<div class="card">
+					<img src="./images/image1.png" class="card-img-top" alt="Featured 1">
+					<div class="card-body">
+						<h5 class="card-title">The Wonders of Science: Exploring the Universe</h5>
+						<p class="card-text">Dive into the fascinating world of scientific discovery! This resource provides interactive lessons on physics, chemistry, and biology, helping learners grasp complex scientific concepts through engaging explanations and experiments.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="card">
+					<img src="./images/image2.png" class="card-img-top" alt="Featured 3">
+					<div class="card-body">
+						<h5 class="card-title">Unraveling History: A Journey Through Time</h5>
+						<p class="card-text">Explore pivotal historical events, influential figures, and civilizations that shaped the world we live in today.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Home Section End -->
+
 	<!-- Bootstrap Script -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
