Added Categories Section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 					<div class="card-body">
 						<h5 class="card-title">The Wonders of Science: Exploring the Universe</h5>
 						<p class="card-text">Dive into the fascinating world of scientific discovery! This resource provides interactive lessons on physics, chemistry, and biology, helping learners grasp complex scientific concepts through engaging explanations and experiments.</p>
+						<button class="btn btn-primary">Discover</button>
 					</div>
 				</div>
 			</div>
@@ -63,12 +64,51 @@
 					<div class="card-body">
 						<h5 class="card-title">Unraveling History: A Journey Through Time</h5>
 						<p class="card-text">Explore pivotal historical events, influential figures, and civilizations that shaped the world we live in today.</p>
+						<button class="btn btn-primary">Explore</button>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- Home Section End -->
+
+	<!-- Categories Section Start -->
+	<section id="categories-section" class="container mt-5">
+		<h2 class="text-center text-white">Explore by Category</h2>
+		<p class="text-center text-white">Select a category to discover in-depth educational materials.</p>
+
+		<div id="categories">
+			<div class="category-block text-center mt-4 p-3 border rounded bg-dark text-white">
+				<h3>Mathematical Foundations</h3>
+				<p>Enhance your problem-solving skills with guides, practice problems, and strategies in mathematics.</p>
+				<button class="btn btn-primary">Learn More</button>
+			</div>
+
+			<div class="category-block text-center mt-4 p-3 border rounded bg-dark text-white">
+				<h3>Technology & Innovation</h3>
+				<p>Learn about cutting-edge technologies, digital learning tools, and the future of education.</p>
+				<button class="btn btn-primary">Learn More</button>
+			</div>
+
+			<div id="resources" class="text-center mt-4 p-3 border rounded bg-secondary text-white">
+			    <h3>Resources</h3>
+			    <p>Browse through educational materials that complement each category.</p>
+
+			    <div class="resource-item text-center mt-3 p-3 border rounded bg-dark">
+			        <h4>📚 Understanding Algebra: A Beginner's Guide</h4>
+			        <p>Learn core algebraic principles with interactive exercises and real-world applications to enhance your problem-solving skills.</p>
+			        <a href="#" class="btn btn-primary">View Resource</a>
+			    </div>
+
+			    <div class="resource-item text-center mt-3 p-3 border rounded bg-dark">
+			        <h4>💡 AI & Machine Learning Basics</h4>
+			        <p>Discover how artificial intelligence and machine learning are transforming education and industries worldwide.</p>
+			        <a href="#" class="btn btn-primary">View Resource</a>
+			    </div>
+			</div>
+		</div>
+	</section>
+	<!-- Categories Section End -->
 
 	<!-- Bootstrap Script -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
